{
    "name": "AbilityInputActions",
    "maps": [
        {
            "name": "PlayerAbilityMap",
            "id": "f8f7545b-ac2b-4e3d-8bbe-17aa312c7ca4",
            "actions": [
                {
                    "name": "ChooseAbility1",
                    "type": "Button",
                    "id": "5eb7e62d-0dea-4fe9-9836-1de562229ee3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChooseAbility2",
                    "type": "Button",
                    "id": "a6db03bb-fd09-43a5-aa9f-c43179f3253e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChooseAbility3",
                    "type": "Button",
                    "id": "40bf688d-44d0-472d-8c1d-8eef8c605ea5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChooseAbility4",
                    "type": "Button",
                    "id": "7c933393-4281-4f2d-ade0-053e89954e4c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseAbility",
                    "type": "Button",
                    "id": "7f639cc5-8fc2-46e7-81fe-6a2e689054b0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "583d7e78-da65-4242-97f1-9c1dbcb05965",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc330348-6838-4b71-9ced-822f80158787",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChooseAbility1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78913aa8-87f3-4aa1-ba83-8d379983b154",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChooseAbility2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc92ef58-3cbe-42d6-b25c-e58e110f45fb",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChooseAbility3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2751f470-ab4e-465a-9494-3e3fd0251891",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChooseAbility4",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": []
        }
    ]
}